syntax = "proto3";
import "google/protobuf/empty.proto";
package pb;
option go_package = "internal/app/rpc/pb";


enum UserRole {
  _ = 0;
  MANAGER = 1;
  TECHNICIAN = 2;
}

message CreateUserRequest {
  string name = 1;
  UserRole role = 2;
  string email = 3;
  string password = 4;
}

service UserService {
  rpc CreateUser(CreateUserRequest) returns (google.protobuf.Empty);
}

service HealthCheckService {
  rpc Check(google.protobuf.Empty) returns (google.protobuf.Empty);
}
